[project]
name = "straders_ctri"
version = "0.2.0" 
authors = [
{name="C'tri", email ="pythonpackages@ctri.co.uk"},
]
description = "A series of clients for the Space Traders API, facilitates API interaction, Postgres DB interaction."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["pytest", "requests", "psycopg2", "setuptools", "wheel"]
